--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -21,7 +21,7 @@
   }
 }
 
-@debug math.div(10, 3);
-@debug math.$pi;
-@debug math.floor(2.6);
-@debug math.max(1px, 20px, 15px, 12px);
+// @debug math.div(10, 3);
+// @debug math.$pi;
+// @debug math.floor(2.6);
+// @debug math.max(1px, 20px, 15px, 12px);
