--- a/sass/index.scss
+++ b/sass/index.scss
@@ -10,5 +10,6 @@
 
 // components (button, card, navbar etc)
 @import 'components/card';
+@import 'components/button'
 
 // utilities (margin, padding, opacity, etc)
